fixed headshot alignment

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 /* consultant */
 
 .profile {
-    margin: 10px;
+    margin: 30px 10px 10px 10px;
     padding: 5px;
     max-width: 150px;
     border-radius: 20px;
